[gd_scene load_steps=6 format=3 uid="uid://dx4svs1wfvkcc"]

[ext_resource type="Script" path="res://Scripts/Minigames/FruitShelvesMinigame.gd" id="1_vgile"]
[ext_resource type="Texture2D" uid="uid://do5vuuopoqx6i" path="res://asset/sprite/tile_0303.png" id="2_d10om"]
[ext_resource type="Texture2D" uid="uid://dgprwryoys6bd" path="res://asset/gui/ReverseArrow.png" id="3_st232"]
[ext_resource type="Texture2D" uid="uid://dw8e48m3pa60i" path="res://asset/gui/ReverseArrow2.png" id="4_1bsvg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t38ic"]
size = Vector2(240, 120)

[node name="FruitShelvesMinigame" type="Node2D"]
script = ExtResource("1_vgile")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -15)
scale = Vector2(30, 40)
texture = ExtResource("2_d10om")

[node name="UpArea" type="Area2D" parent="."]
position = Vector2(0, -156)
collision_layer = 64
collision_mask = 32
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="UpArea"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_t38ic")

[node name="BotomArea" type="Area2D" parent="."]
position = Vector2(0, 44)
collision_layer = 64
collision_mask = 32
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="BotomArea"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_t38ic")

[node name="ReverseArrow" type="Sprite2D" parent="."]
position = Vector2(308, -60)
scale = Vector2(5.499, 5)
texture = ExtResource("3_st232")

[node name="ReverseArrow2" type="Sprite2D" parent="."]
position = Vector2(-308, -60)
rotation = 3.14159
scale = Vector2(5.499, 5)
texture = ExtResource("4_1bsvg")

[connection signal="area_entered" from="UpArea" to="." method="_on_up_area_area_entered"]
[connection signal="area_exited" from="UpArea" to="." method="_on_up_area_area_exited"]
[connection signal="area_entered" from="BotomArea" to="." method="_on_botom_area_area_entered"]
[connection signal="area_exited" from="BotomArea" to="." method="_on_botom_area_area_exited"]
